--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <nav>
             <a href="./images.html">Image Search</a>
-            <a href="">Advanced Search</a>
+            <a href="./advanced.html">Advanced Search</a>
         </nav>
         <h1>
             <span class="blue">G</span>
