Add Feeling Lucky button functionality

--- a/index.html
+++ b/index.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Search</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <nav>
-            <a href="./images.html">Image Search</a>
-            <a href="./advanced.html">Advanced Search</a>
-        </nav>
-        <h1>
-            <span class="blue">G</span>
-            <span class="red">o</span>
-            <span class="yellow">o</span>
-            <span class="blue">g</span>
-            <span class="green">l</span>
-            <span class="red">e</span>
-        </h1>
-        <form action="https://google.com/search">
-            <input type="text" name="q">
-            <div class="buttons">
-                <input type="submit" value="Google Search">
-                <input type="submit" value="I'm Feeling Lucky">
-            </div>
-        </form>
-    </body>
+<head>
+    <title>Search</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <nav>
+        <a href="./images.html">Image Search</a>
+        <a href="./advanced.html">Advanced Search</a>
+    </nav>
+    <h1>
+        <span class="blue">G</span>
+        <span class="red">o</span>
+        <span class="yellow">o</span>
+        <span class="blue">g</span>
+        <span class="green">l</span>
+        <span class="red">e</span>
+    </h1>
+    <form action="https://www.google.com/search">
+        <input type="text" name="q">
+        <div class="buttons">
+            <input type="submit" value="Google Search">
+            <input type="submit" name="btnI" value="I'm Feeling Lucky">
+        </div>
+    </form>
+</body>
 </html>
